--- a/angular-player/.gitignore
+++ b/angular-player/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Audio files for test
+*.mp3
+
 # compiled output
 /dist
 /tmp
